# tox-message-hub

./: CMakeLists.txt  config.h.in  main.cpp  server.cpp  server.h  serverstate.cpp  serverstate.h
libs/amd64/: libtoxcore.so.0.0.0
libs/armhf/: libsodium.so.13.0.2  libtoxcore.so.0.0.0
libs/i386/: libtoxcore.so.0.0.0
meta/: CMakeLists.txt  package.yaml.in  readme.md  run.sh.in
